# ft_ps_tester

./: LICENSE  README.md  pyproject.toml
ft_ps_tester/: __init__.py  __main__.py  cli.py
ft_ps_tester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
